# agentic-cv-tailoring

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  config.yaml  pyproject.toml
data/: demo_template.html  persona.yaml  standard_cv.md  standard_cv_en.md
data/zeugnisse/: 01_mediacorp_testimonial.md  02_healthapp_testimonial.md  03_gastrosaas_testimonial.md  04_directorysaas_testimonial.md
evals/: run.py
evals/cases/: demo_pm_de.yaml  demo_pm_en.yaml
prompts/: analyst.md  coach_reviewer.md  diff.md  factcheck.md  hiring_manager_reviewer.md  keyword_marker.md  naturalisation.md  translator.md  writer.md
scripts/: init_persona.py
src/cv_tailor/: __init__.py  beleg_index.py  clarifications.py  cli.py  consistency_check.py  cost_tracking.py  cv_filename.py  experience_activation.py  length_check.py  llm.py  logging_config.py  orchestrator.py  pdf_renderer.py  pipeline_stages.py  profile_fit.py  prompt_context.py  quality_snapshot.py  redundancy_check.py  web.py  zeugnis_parser.py
src/cv_tailor/agents/: __init__.py  analyst.py  coach_reviewer.py  (+8 more)
stellenanzeigen/demo/: posting_de.md  posting_en.md
tests/: conftest.py  test_clarifications_topic_gating.py  test_consistency_check.py  test_cost_tracking.py  test_cv_filename.py  test_factcheck_parser.py  test_factcheck_round_cap.py  test_keyword_marker_helpers.py  test_length_check.py  test_pdf_renderer_helpers.py  test_profile_fit.py  test_prompt_cache.py  test_prompt_context.py  test_quality_snapshot.py  test_redundancy_check.py  test_translator_language_detection.py  test_web_recovery.py
(+3 files in other folders)
