[project]
name = "cv-tailor"
version = "0.1.0"
description = "Multi-agent pipeline for tailoring a CV to a specific job posting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1",
  "litellm>=1.50",
  "pyyaml>=6.0",
  "pdfplumber>=0.11",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "playwright>=1.59.0",
  "pypdf>=6.11.0",
]

[project.scripts]
cv-tailor = "cv_tailor.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_tailor"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Tests live in tests/ and address the deterministic layer of cv-tailor:
# regex helpers, validators, language detection, topic classification,
# cost/quality aggregation, etc. LLM-driven agents are covered by the
# eval-suite (evals/run.py), not pytest, because they need real runs.
